# Generated by Django 6.0.5 on 2026-06-16 22:10

import django.db.models.deletion
from django.db import migrations, models


class Migration(migrations.Migration):

    initial = True

    dependencies = [
        ('inventory', '0001_initial'),
        ('organisations', '0001_initial'),
        ('users', '0001_initial'),
    ]

    operations = [
        migrations.CreateModel(
            name='Ausleihanfrage',
            fields=[
                ('id', models.BigAutoField(auto_created=True, primary_key=True, serialize=False, verbose_name='ID')),
                ('startdatum', models.DateField()),
                ('enddatum', models.DateField()),
                ('anfragestatus', models.CharField(choices=[('eingereicht', 'Eingereicht'), ('genehmigt', 'Genehmigt'), ('abgelehnt', 'Abgelehnt'), ('zurueckgezogen', 'Zurückgezogen'), ('abgelaufen', 'Abgelaufen'), ('teilweise_abgelehnt', 'Teilweise abgelehnt')], default='eingereicht', max_length=30)),
                ('ablehnungsgrund', models.CharField(blank=True, max_length=500, null=True)),
                ('bedingungen_akzeptiert', models.BooleanField(default=False)),
                ('erstellt_am', models.DateTimeField(auto_now_add=True)),
                ('aktualisiert_am', models.DateTimeField(auto_now=True)),
                ('is_seed', models.BooleanField(default=False)),
                ('gegenstand', models.ForeignKey(on_delete=django.db.models.deletion.CASCADE, related_name='ausleihanfragen', to='inventory.gegenstandstyp')),
                ('nutzer', models.ForeignKey(on_delete=django.db.models.deletion.CASCADE, related_name='ausleihanfragen', to='users.nutzer')),
                ('organisation', models.ForeignKey(on_delete=django.db.models.deletion.CASCADE, related_name='ausleihanfragen', to='organisations.organisation')),
            ],
            options={
                'db_table': 'ausleihanfrage',
            },
        ),
    ]
