@startuml

class Nutzer {
  Name
  Passwort
  E-Mail
  (Telefonnummer)
  Nutzerrolle
}

class Organisation {
  Name
  Typ
}

class Gegenstandstyp {
  Name
  Kategorie
  Standort
  Beschreibung
}

class Gegenstandsexemplar {
  Inventarnummer
  Beschreibung
  Zustand
  Verfügbarkeitsstatus
}

class Ausleihanfrage {
  Startdatum
  Enddatum
  Status
  (Ablehnungsgrund)
}


class Ausleihe {
  Startdatum
  Enddatum
  Status
  Übergabetermin
  (Rückgabedatum)
}

class Reservierung {
  Startdatum
  Enddatum
  Status
}

class Zustandsprotokoll {
  Typ
  Notiz
  (Fotos)
}

class Benachrichtigung {
  Typ
  Inhalt
  Status
}



class AusleihHistorie {
  Ausleihdatum
  Rückgabedatum
  ZustandVorher
  ZustandNachher
}

class Standort {
  Name
  Beschreibung
}

class Kategorie {
  Name
  Beschreibung
}

class Nutzungsbedingungen {
  Text
  Version
}

Nutzer "1" --> "0..*" Ausleihanfrage : erstellt
Nutzer "1" --> "0..*" Ausleihe : tätigt
Nutzer "1" --> "0..*" Reservierung : tätigt / bekommt / hat
Organisation "1" --> "0..*" Nutzer : enthält
Organisation "1" --> "0..*" Gegenstandstyp : verwaltet
Gegenstandstyp "1" --> "0..*" Gegenstandsexemplar : besteht aus
Gegenstandsexemplar "1" --> "0..*" Reservierung : wird reserviert in
Gegenstandsexemplar "1" --> "0..1" Ausleihe : wird ausgeliehen in
Ausleihanfrage "1" --> "0..1" Reservierung : führt zu
Reservierung "1" --> "0..1" Ausleihe : wird umgesetzt in
Ausleihe "1" --> "0..2" Zustandsprotokoll : dokumentiert
Ausleihe "1..*" --> "1" AusleihHistorie : dokumentiert
Gegenstandstyp "0..*" --> "1" Kategorie : gehört zu
Gegenstandsexemplar "0..*" --> "1" Standort : befindet sich in
Nutzer "1" --> "0..*" Benachrichtigung : erhält
Ausleihe "0..*" --> "0..1" Nutzungsbedingungen : akzeptiert

@enduml